# VerifAI

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
src/verifai/: main.py
src/verifai/core/: config.py
src/verifai/core/agent/: __init__.py  agent.py
src/verifai/core/services/: __init__.py  assertions.py  base.py  coverage.py  log_triage.py  testbench.py
src/verifai/ui/: api_connector.py  main_window.py  workers.py
src/verifai/ui/tabs/: __init__.py  assertions_tab.py  base_tab.py  coverage_tab.py  log_triage_tab.py  testbench_tab.py
src/verifai/utils/: json_extract.py  text.py
tests/: test_main_window.py
tests/core/services/: test_assertions.py  test_coverage.py  test_log_triage.py  test_testbench.py
tests/ui/: test_tabs.py
tests/utils/: test_json_extract.py  test_text.py
