[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verifai"
version = "0.1.0"
description = "VerifAI - AI-powered verification tool"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.7.0",
    "anthropic>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
]

[project.scripts]
verifai = "verifai.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# This project uses function-based tests only; disable class-based test
# collection so domain classes like TestbenchGenerator aren't mistaken
# for test classes.
python_classes = ""

[tool.ruff]
src = ["src"]
line-length = 100
